--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
